--- a/index.html
+++ b/index.html
@@ -1,62 +1,97 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="UTF-8">
-    <title>My landing page</title>
-    <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
-    <!-- We need this line below for responsiveness! -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <title>My landing page</title>
+  <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
+  <!-- We need this line below for responsiveness! -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
-    <!-- code a Hero / Banner section -->
-    <div class="banner">
-        <div class="container">
-            <h1>Le Wagon brings tech skills to creative people!</h1>
-            <p>Change your life and learn to code at one of our campuses around the world.</p>
-            <a class="btn-primary" href="#">Apply now!</a>
-        </div>
-    </div>
-
-    <!-- code a "How it works" section -->
+  <!-- code a Hero / Banner section -->
+  <div class="banner" style="background-image: url('images/background.png');">
     <div class="container">
-        <h2 class="text-center">How it works</h2>
-        <div class="cards">
-
-            <div class="card">
-                <img src="images/apply.svg" alt="">
-                <h4>Apply</h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-
-            <div class="card">
-                <img src="images/learn.svg" alt="">
-                <h4>Learn to code</h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-
-            <div class="card">
-                <img src="images/product.svg" alt="">
-                <h4>Build products</h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-            </div>
-        </div>
+      <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
+      <p>Change your life and learn to code at one of our campuses around the world.</p>
+      <a class="btn-primary" href="#">Apply now</a>
     </div>
+  </div>
 
-    <!-- code a "How it works" section -->
-
-    <!-- code a footer -->
-    <div class="footer">
-        <div class="links">
-            <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-fw fa-github"></i></a>
-            <a href="#"><i class="fab fa-fw fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-fw fa-instagram"></i></a>
-            <p>This website was coded By andyramaroson with <i class="fas fa-heart"></i> at Le Wagon to bdx.</p>
-        </div>
+  <!-- code a "How it works" section -->
+  <div class="container">
+    <h2 class ="texte-center">How it works</h2>
+    <div class="cards">
+      <div class="card">
+        <img src="images/apply.svg" alt=" Apply">
+        <h3>Apply</h3>
+        <p>First apply to one of our campuses around the word.</p>
+      </div>
+    <div class="card">
+      <img src="images/learn.svg" alt=" Learn">
+      <h3>Learn</h3>
+      <p>Learn Ruby on Rails, Javascript, SQL & much more!.</p>
     </div>
-</body>
+   <div class="card">
+      <img src="images/product.svg" alt="product">
+      <h3>Build products</h3>
+      <p>Finally you will be able to bring your idea to life.</p>
+    </div>
+   </div> 
+  </div>
 
+ <!-- code a "How it works" 2 section -->
+ <div class="container">
+   <div class="cards">
+      <div class="card">
+        <img src="images/apply.svg" alt=" Apply">
+        <h3>Apply</h3>
+        <p>First apply to one of our campuses around the word.</p>
+      </div>
+    <div class="card">
+        <img src="images/learn.svg" alt=" Learn">
+        <h3>Learn</h3>
+        <p>Learn Ruby on Rails, Javascript, SQL & much more!.</p>
+    </div>
+   <div class="card">
+      <img src="images/product.svg" alt="product">
+      <h3>Build products</h3>
+      <p>Finally you will be able to bring your idea to life.</p>
+    </div>
+   </div> 
+  </div>
+
+  <!-- code a "How it works" 2 section -->
+ <div class="container">
+    <div class="cards">
+      <div class="card">
+        <img src="images/apply.svg" alt=" Apply">
+        <h3>Apply</h3>
+        <p>First apply to one of our campuses around the word.</p>
+      </div>
+    <div class="card">
+        <img src="images/learn.svg" alt=" Learn">
+        <h3>Learn</h3>
+        <p>Learn Ruby on Rails, Javascript, SQL & much more!.</p>
+    </div>
+   <div class="card">
+      <img src="images/product.svg" alt="product">
+      <h3>Build products</h3>
+      <p>Finally you will be able to bring your idea to life.</p>
+    </div>
+   </div> 
+  </div>
+
+  <!-- code a footer -->
+  <div class="footer">
+    <div class="links">
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
+      <a href="#"><i class="fab fa-github"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <p> This website was coded by Andy Ramaroson with <i class="fas fa-heart"></i> at the wagon Bordeaux Batch#484. </p>
+    </div>
+   </div>
+
+ </body>
 </html>
